# python-uv-monorepo-template

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  LICENSE  README.md  pyproject.toml  release-please-config.json
.clinerules/: import_patterns.md  naming_conventions.md  python_workspace.md  typing_annotations.md
.github/workflows/: precommit.yaml  release-please.yml
apps/sample-app/: README.md  pyproject.toml
apps/sample-app/src/sample_app/: __init__.py  main.py
apps/sample-app/tests/: __init__.py  test_main.py
src/: constants.py
src/config/: __init__.py
