[project]
name = "sample-app"
version = "0.1.0"
description = "Sample application in the workspace"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sample-app = "sample_app.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest==8.3.3",
    "ruff>=0.9.2",
    "taskipy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
